[QMS-282] Tags icons/rating disappear from workspace after saving and closing a project
[QMS-285] WMTS-based maps aren't restored correctly
[QMS-297] Add GUI framework for POI databases
[QMS-299] CEnergyCycling is storing it's configuration in the `General` section instead of it's own.
[QMS-301] Load POI file
[QMS-303] Add POI icons
[QMS-311] Automatically save projects to device
[QMS-314] Fix/Add POI categories
[QMS-315] Make POI Icons User-Selectable
[QMS-317] Enable user to add POI to project via right-click
[QMS-318] Change poi_t to use radians
[QMS-321] Improve name selection for POI
[QMS-322] Make POIs show up in 'Select Items On Map'
[QMS-337] Upgrade to Proj 8 API

V1.15.2
[QMS-264] Windows: adapt build scripts for 1.15.1 release
[QMS-265] Configuring BRouter offline on MacOS crashes
[QMS-268] Crash after closing project where range is being selected
[QMS-270] Windows: rename LICENSE file to 1LICENSE.txt
[QMS-273] Windows: install Help search index files

V1.15.1
[QMS-158] Change Routino Profiles search for [prefix-]profiles.xml
[QMS-216] QMapShack does not compile with Qt-5.15
[QMS-217] Fix crash due to faulty profiles.xml
[QMS-223] Add additional filter properties
[QMS-231] Improve English spelling
[QMS-235] Save track profile window's geometry when window gets closed
[QMS-240] Fix negative courses in the ruler tool
[QMS-244] Unable to create rotino database (planetsplitter: cannot open file)
[QMS-247] Build error: "Target "qmapshack" links to target "Qt5::Positioning" but the target was not found"
[QMS-254] MySQL: QMapShack does not automatically reconnect
[QMS-257] Import gpx file to group folder does not trigger update
[QMS-260] QMapTool: Enhance cut tool to work with files containig reference information
[QMS-262] Wrong timestamp when loading FIT

V1.15.0
[QMS-68] Route Optimization
[QMS-132] DEMs: Make the scale range control cut off not only rendering but also loading or requesting the data.
[QMS-134] Rework track range selection from scratch